day3 first commit

--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body{
     margin: 0px;
     padding: 0px;
+    font-family: sans-serif;
 }
 
 #top-nav{
@@ -30,7 +31,7 @@ body{
     
     background-image: linear-gradient(to top,
      rgba(0,0,0,0.7) 10%,
-     rgba(0,0,0,0.4) 20%,
+     rgba(0,0,0,0.5) 30%,
      rgba(0,0,0,0.3) 50%,
      rgba(0,0,0,0) 100%);
 
@@ -93,7 +94,7 @@ body{
    border-radius: 10px;
 }
 .input-box{
-	width: 700px;
+	width: 660px;
 	height: 58px;
 	background-color: white;
 	display: flex;
@@ -139,7 +140,7 @@ body{
 /* services section */
 
 #services{
-   width: 70%;
+   width: 65%;
    margin: auto;
    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
    margin-top: -70px;
@@ -151,26 +152,17 @@ body{
    text-align: center;
    gap: 0px;
   border-radius: 8px;
-  
+  margin-bottom: 50px;
 }
-/* #services>div:nth-child(7){
-    grid-column-start:2;
-     
-}
-#services>div>img{
-       width: 22%;
-}
-#services>div{
-    margin-bottom: 0px;
-    border: 1px solid black;
-    padding: 10px;
-    
-} */
 #first-row>div>img{
   width: 22%;
 }
 #second-row>div>img{
     width: 22%;
+}
+#second-row,#first-row>div>p{
+    font-family: sans-serif;
+    font-size: 14px;
 }
 
 #first-row{
@@ -195,3 +187,102 @@ body{
      padding: 10px;
      
 }
+#first-row>div:hover{
+    background-color: rgb(245, 245, 245);
+}
+#second-row>div:hover{
+    background-color: rgb(245, 245, 245);
+}
+
+
+/* second services section */
+
+#container{
+    height: 700px;
+    width: 100%;
+    display:flex;
+   margin-top: 20px;
+   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+#bg-img{
+    width: 50%;
+    
+}
+#services-2{
+    width: 50%;
+    /* background-color: black; */
+    padding-left: 50px;
+}
+#bg-img{
+    
+    /* background:  rgba(0, 0, 0, 0.2)
+    url(https://res.cloudinary.com/urbanclap/image/upload/q_auto,f_auto,fl_progressive:steep/t_high_res_category/images/growth/home-screen/1615874646690-66ab68.jpeg);
+    background-size: cover;
+    background-position:center; */
+    background-image: linear-gradient( to right,
+ rgba(0,0,0,0) ,
+ rgba(0,0,0,0.5) ,
+ rgba(0,0,0,0.8) ,
+ rgba(0,0,0,1));
+    
+}
+#head2{
+    font-size: 50px;
+    margin-top: 40px;
+    color: whitesmoke;
+  font-family: sans-serif;
+}
+#head3{
+    color: rgb(167, 167, 167);
+  font-family: sans-serif;
+  margin-top: -30px;
+  font-size: 19px;
+}
+.head4{
+    font-size: 19px; 
+}
+#grid-service{
+     display: grid;
+     grid-template-columns: repeat(4,1fr);
+     grid-template-rows: auto;
+     border-radius: 8px;
+     width: 75%;
+     background-color: white;
+}
+#grid-service>div>img{
+    width:55%;
+    border-radius: 50%;
+}
+
+#grid-service>div~:hover{
+    background-color:rgb(245, 245, 245)
+}
+#grid-service>div:nth-child(1){
+   grid-column-start: 1;
+   grid-column-end: 5;
+   font-family: sans-serif;
+   padding-left: 10px;
+}
+#grid-service>div:not(:first-child){
+   text-align: center;
+ padding-top: 20px;
+ border: 1px solid rgb(185, 185, 185);
+}
+#grid-service>div>p:not(:first-child){
+   font-size: 14px;
+ }
+
+ #gradient-2{
+    background:  rgba(0, 0, 0, 0)
+    url(https://res.cloudinary.com/urbanclap/image/upload/q_auto,f_auto,fl_progressive:steep/t_high_res_category/images/growth/home-screen/1615874646690-66ab68.jpeg);
+    background-size:cover;
+    background-position:center;
+    width: 50%;
+ }
+
+ 
+ /* background-image: linear-gradient( to right,
+ rgba(0,0,0,0.2) ,
+ rgba(0,0,0,0.5) ,
+ rgba(0,0,0,0.8) ,
+ rgba(0,0,0,1)); */
