--- a/index.css
+++ b/index.css
@@ -516,3 +516,225 @@ body{
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
    cursor: pointer;
 }
+
+/* media query */
+
+@media all and (min-width:200px) and (max-width:450px){
+    #company-name{
+        margin-left:90px;
+        font-size: 20px;
+       margin-top: -9px;
+    }
+    
+    #logo{
+        width: 19%;
+        margin-left: 30px;
+        margin-top: 15px;
+    }
+    #top{
+        flex-direction: column;
+    }     
+    .input-box{
+        width: 200px;
+        margin-left: 0px;
+        margin-top: 20px;
+    }
+    .input-box > input{
+      width: 100px;
+        height: 52px;
+        border: none;
+        outline: none;
+        font-size: 18px;
+        padding-left: 10px;
+        border-radius: 10px;  
+    }
+    .bottom-links{
+        display: flex;
+        width: 28%;
+        margin: auto;
+        margin-top: 10px;
+       flex-direction: column;
+    }
+    
+    .bottom-links>a:nth-child(3){  
+        margin-bottom: 60px;
+    }
+     
+    .bottom-links>a{  
+        margin-bottom: 10px;
+    }
+    #bottom-section{
+        display: flex;
+        flex-direction: column;
+        width: 40%;
+       margin: auto;
+       
+    }
+    #loc{
+        font-size: 10px;
+    }
+    #top-rigth-section{
+        margin-left: 30px;
+        margin-top: 20px;
+        gap: 25px;
+        flex-direction: column;
+        
+    }
+    #first-row{
+    
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+    }
+    #second-row{
+       flex-direction: column;
+        padding-left: 20px;  
+    }
+    #grid-service{
+        display: flex;
+        flex-direction: column;   
+        margin-top: 0px;
+   }
+   #grid-service>div{
+    height: 50px;
+    width: 50%;
+    margin: auto;
+   }
+   #grid-service>div>img{
+    width:22%;
+    border-radius: 50%;
+    
+}
+
+#grid-service>div:not(:first-child){
+    text-align: center;
+  border: 1px solid rgb(185, 185, 185);
+ }
+ #grid-service>div>p:not(:first-child){
+    font-size: 8px;
+  }
+  #grid-service>div>p:first-child{
+    margin-top: 0px;
+  }
+  #gid-cont{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    width: 60%;
+    margin: auto;
+    height: auto;
+    margin-top: 50px;
+    padding-top: 10px;
+
+}
+#row-one{
+   grid-template-columns: repeat(3,1fr);
+ }
+ #cities{
+    grid-template-columns: repeat(3,1fr);
+ }
+ #botoom-last-row{
+   flex-direction: column;
+ }
+ #company-name{
+    margin-left: -20px;
+    font-size: 20px;
+   margin-top: -9px;
+   color: whitesmoke;
+   font-family:sans-serif ; 
+}
+#store{
+   flex-direction: column;
+   margin-left: -140px;
+ }
+ 
+ #botoom-last-row>div>p{
+    margin-left: 20px;
+  }
+  #botoom-last-row>div>img{
+    width: 18%;
+    margin-top: 10px;
+ }
+  }
+
+
+
+  @media all and (min-width:451px) and (max-width:800px){
+    #top-rigth-section{
+        margin-left: 30px;
+        margin-top: 20px;   
+    }
+    #top{
+        flex-direction: column;
+    }     
+    .input-box{
+        width: 300px;
+        
+    }
+    #top-rigth-section{
+        margin-left: 150px;
+        margin-top: 20px;
+        gap: 25px;
+        flex-direction: column;
+        
+    }
+    #first-row{
+    
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+    }
+    #second-row{
+       flex-direction: column;
+        padding-left: 20px;  
+    }
+    #grid-service{
+        display: flex;
+        flex-direction: column;   
+        margin-top: 0px;
+   }
+   #grid-service>div{
+    height: 50px;
+    width: 50%;
+    margin: auto;
+   }
+   #grid-service>div>img{
+    width:22%;
+    border-radius: 50%;
+    
+}
+
+#grid-service>div:not(:first-child){
+    text-align: center;
+  border: 1px solid rgb(185, 185, 185);
+ }
+ #grid-service>div>p:not(:first-child){
+    font-size: 8px;
+  }
+  #grid-service>div>p:first-child{
+    margin-top: 0px;
+  }
+  #gid-cont{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    width: 60%;
+    margin: auto;
+    height: auto;
+    margin-top: 50px;
+    padding-top: 10px;
+
+}
+#row-one{
+   grid-template-columns: repeat(4,1fr);
+ }
+ #cities{
+    grid-template-columns: repeat(5,1fr);
+ }
+ #botoom-last-row{
+   flex-direction: column;
+ }
+ #company-name{
+    margin-left: 0px;
+    font-size: 20px;
+   margin-top: -9px;
+   color: whitesmoke;
+   font-family:sans-serif ; 
+}
+  }
